# glue-k3d

./: README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci_workflows.yml
docs/: index.html
glue_k3d/: __init__.py  base_viewer.py  scatter_layer_artist.py  scatter_viewer.py  utils.py  viewer.py  volume_layer_artist.py
glue_k3d/common/: figure.py  scatter.py  viewer.py  volume.py
glue_k3d/exporters/: base.py  objects.py  qt.py  utils.py  vispy.py
glue_k3d/scatter/: layer_artist.py  layer_state.py  viewer.py
glue_k3d/viewers/common/: tools.py  viewer.py
glue_k3d/viewers/scatter/: layer_artist.py  layer_state_widget.py  viewer.py
glue_k3d/viewers/volume/: layer_artist.py  viewer.py  viewer_state_widget.py  viewer_state_widget.vue
glue_k3d/volume/: data_proxy.py  layer_artist.py  layer_state_widget.py  layer_state_widget.vue  viewer.py  viewer_state_widget.py  viewer_state_widget.vue
