[metadata]
name = glue-k3d
provides = glue_k3d 
author = Jonathan Carifio
author_email = glue.viz@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/glue-viz/glue-plotly
description = Experimental k3d Jupyter viewer for glue
long_description = file: README.rst

[options]
zip_safe = False
python_requires = >=3.10
packages = find:
install_requires =
    glue-jupyter
    k3d

[options.extras_require]
test =
    pytest
    pytest-cov
    mock

[options.package_data]
* = *.png, *.svg, *.ui, *.vue

[options.entry_points]
glue.plugins =
    glue_k3d=glue_k3d:setup
